// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`christmasTime should match snapshot 1`] = `
[
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "nativityOfTheLord": {},
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:nativity_of_the_lord",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "nativity_of_the_lord",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "02_PROPER_OF_TIME_SOLEMNITY",
    "seasons": [
      {
        "dayOfSeason": 1,
        "key": "CHRISTMAS_TIME",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 2,
      },
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 2,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_2",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 2,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 3,
      },
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 3,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_3",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 3,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 4,
      },
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 4,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_4",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 4,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 5,
      },
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 5,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_5",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 5,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 6,
      },
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 6,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_6",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 6,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 7,
      },
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 7,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_7",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 7,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "holyFamily": {},
      "yearOffset": -1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:holy_family_of_jesus_mary_and_joseph",
    ],
    "liturgicalDayId": "holy_family_of_jesus_mary_and_joseph",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "05_GENERAL_LORD_FEAST",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "date": 1,
      "month": 1,
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:mary_mother_of_god",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "mary_mother_of_god",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "03_GENERAL_SOLEMNITY",
    "seasons": [
      {
        "dayOfSeason": 8,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "secondSundayAfterChristmas": {},
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.second_sunday_after_christmas",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "second_sunday_after_christmas",
    "periods": [
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "06_UNPRIVILEGED_SUNDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 2,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 2,
      },
    ],
    "liturgicalDayId": "christmas_time_january_2",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 9,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 3,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 3,
      },
    ],
    "liturgicalDayId": "christmas_time_january_3",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 10,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 4,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 4,
      },
    ],
    "liturgicalDayId": "christmas_time_january_4",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 11,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 5,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 5,
      },
    ],
    "liturgicalDayId": "christmas_time_january_5",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 12,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 6,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 6,
      },
    ],
    "liturgicalDayId": "christmas_time_january_6",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 13,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 7,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 7,
      },
    ],
    "liturgicalDayId": "christmas_time_january_7",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 14,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 8,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 8,
      },
    ],
    "liturgicalDayId": "christmas_time_january_8",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 15,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "epiphany": {},
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:epiphany_of_the_lord",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "epiphany_of_the_lord",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "02_PROPER_OF_TIME_SOLEMNITY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 1,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 1,
      },
    ],
    "liturgicalDayId": "monday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 2,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 2,
      },
    ],
    "liturgicalDayId": "tuesday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 3,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 3,
      },
    ],
    "liturgicalDayId": "wednesday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 4,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 4,
      },
    ],
    "liturgicalDayId": "thursday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 5,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 5,
      },
    ],
    "liturgicalDayId": "friday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 6,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 6,
      },
    ],
    "liturgicalDayId": "saturday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "baptismOfTheLord": {},
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:baptism_of_the_lord",
    ],
    "liturgicalDayId": "baptism_of_the_lord",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "02_PROPER_OF_TIME_SOLEMNITY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
]
`;

exports[`christmasTime should match snapshot with year offset to +1 1`] = `
[
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "nativityOfTheLord": {},
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:nativity_of_the_lord",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "nativity_of_the_lord",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "02_PROPER_OF_TIME_SOLEMNITY",
    "seasons": [
      {
        "dayOfSeason": 1,
        "key": "CHRISTMAS_TIME",
        "weekOfSeason": 1,
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 2,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 2,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_2",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 2,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 3,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 3,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_3",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 3,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 4,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 4,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_4",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 4,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 5,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 5,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_5",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 5,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 6,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 6,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_6",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 6,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayWithinOctaveOfChristmas": {
        "dayOfOctave": 7,
      },
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.octave",
      {
        "count": 7,
      },
    ],
    "liturgicalDayId": "christmas_octave_day_7",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "09_PRIVILEGED_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 7,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "holyFamily": {},
      "yearOffset": 0,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:holy_family_of_jesus_mary_and_joseph",
    ],
    "liturgicalDayId": "holy_family_of_jesus_mary_and_joseph",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "05_GENERAL_LORD_FEAST",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "date": 1,
      "month": 1,
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:mary_mother_of_god",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "mary_mother_of_god",
    "periods": [
      {
        "key": "CHRISTMAS_OCTAVE",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "03_GENERAL_SOLEMNITY",
    "seasons": [
      {
        "dayOfSeason": 8,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "secondSundayAfterChristmas": {},
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.second_sunday_after_christmas",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "second_sunday_after_christmas",
    "periods": [
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "06_UNPRIVILEGED_SUNDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 2,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 2,
      },
    ],
    "liturgicalDayId": "christmas_time_january_2",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 9,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 3,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 3,
      },
    ],
    "liturgicalDayId": "christmas_time_january_3",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 10,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 4,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 4,
      },
    ],
    "liturgicalDayId": "christmas_time_january_4",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 11,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 5,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 5,
      },
    ],
    "liturgicalDayId": "christmas_time_january_5",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 12,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 6,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 6,
      },
    ],
    "liturgicalDayId": "christmas_time_january_6",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 13,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 7,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 7,
      },
    ],
    "liturgicalDayId": "christmas_time_january_7",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 14,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayBeforeEpiphany": {
        "dayOfMonth": 8,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.before_epiphany",
      {
        "day": 8,
      },
    ],
    "liturgicalDayId": "christmas_time_january_8",
    "periods": [
      {
        "key": "DAYS_BEFORE_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "dayOfSeason": 15,
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "epiphany": {},
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:epiphany_of_the_lord",
    ],
    "isHolyDayOfObligation": true,
    "liturgicalDayId": "epiphany_of_the_lord",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "02_PROPER_OF_TIME_SOLEMNITY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 1,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 1,
      },
    ],
    "liturgicalDayId": "monday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 2,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 2,
      },
    ],
    "liturgicalDayId": "tuesday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 3,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 3,
      },
    ],
    "liturgicalDayId": "wednesday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 4,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 4,
      },
    ],
    "liturgicalDayId": "thursday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 5,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 5,
      },
    ],
    "liturgicalDayId": "friday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "weekdayAfterEpiphany": {
        "dayOfWeek": 6,
      },
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "seasons:christmas_time.after_epiphany",
      {
        "dow": 6,
      },
    ],
    "liturgicalDayId": "saturday_after_epiphany",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "13_WEEKDAY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
  {
    "colors": [
      "WHITE",
    ],
    "dateDef": {
      "baptismOfTheLord": {},
      "yearOffset": 1,
    },
    "fromCalendarId": "proper-of-time",
    "i18nDef": [
      "names:baptism_of_the_lord",
    ],
    "liturgicalDayId": "baptism_of_the_lord",
    "periods": [
      {
        "key": "DAYS_FROM_EPIPHANY",
      },
      {
        "key": "CHRISTMAS_TO_PRESENTATION_OF_THE_LORD",
      },
    ],
    "precedence": "02_PROPER_OF_TIME_SOLEMNITY",
    "seasons": [
      {
        "key": "CHRISTMAS_TIME",
      },
    ],
  },
]
`;
